<resources>
    <string name="app_name">MN-Moviles-Examen-1B</string>
    <string name="botonCrear">Crear</string>
    <string name="botonListar">Listar</string>
    <string name="botonDetalle">Detalle</string>
    <string name="botonNuevo">Nuevo</string>
    <string name="botonGuardar">Guardar</string>
    <string name="menuCompartir">Compartir</string>
    <string name="menuEditar">Editar</string>
    <string name="menuBorrar">Borrar</string>
    <string name="txtViewSo">Crear SO</string>
    <string name="labelNombre">Nombre</string>
    <string name="labelApi">Version API</string>
    <string name="labelfechaLanzamiento">Fecha Lanzaimiento</string>
    <string name="labelpeso">Peso (Gigas)</string>
    <string name="labelinstalado">Instalado</string>
    <string name="labeldetalleApp">Detalle Aplicacion</string>
    <string name="labelVersion">Version</string>
    <string name="labelUrl">Url Descarga</string>
    <string name="labelCosto">Costo</string>
    <string name="labelSoId">Sistema Operativo Id</string>
    <string name="labelCrearApp">Crear Aplicacion</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="boton_mapa">Mapa</string>
    <string name="laberUsername">Usuario</string>
    <string name="laberIngresar">Ingresar</string>
    <string name="laberPassword">Contraseña</string>
    <string name="botonTomarFoto">Tomar Foto</string>
    <string name="botonBuscar">Buscar</string>
    <string name="botonTodos">Todos</string>
    <string name="botonOrdenes">Ordenes</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="botonCrearOrden">Crear Orden</string>
    <string name="labelFecha">Fecha</string>
    <string name="labelTota">Total</string>
    <string name="labelEstado">Estado</string>
    <string name="labelIdOrden">ID Orden</string>
    <string name="labelIdLugar">Lugar de Entrega</string>
</resources>
